--- a/app/assets/stylesheets/layout/home.scss
+++ b/app/assets/stylesheets/layout/home.scss
@@ -4,6 +4,7 @@
 
   background-image: image-url("home/banner.jpg");
   background-size: cover;
+  background-attachment: fixed;
 
   display: flex;
   flex-direction: column;
@@ -11,9 +12,6 @@
   align-items: center;
 
   .reserve {
-    font-size: 3.0em;
-    color: white;
-    text-shadow: rgb(255, 255, 255) 0px 0px 20px, rgb(255, 255, 255) 0px 0px 30px, rgb(255, 255, 255) 0px 0px 40px, rgb(255, 255, 255) 0px 0px 70px, rgb(255, 255, 255) 0px 0px 80px, rgb(255, 255, 255) 0px 0px 100px;
   }
 
   header {
@@ -24,11 +22,15 @@
     height: 10%;
 
     nav {
-      font-size: 1.6em;
+      font-size: 1.5em;
       height: 100%;
       display: flex;
       justify-content: space-around;
       align-items: center;
+
+      a {
+        color: black;
+      }
     }
   }
 
