--- a/app/assets/stylesheets/base/page.scss
+++ b/app/assets/stylesheets/base/page.scss
@@ -5,3 +5,8 @@ html, body {
 body {
   overflow-x: hidden;
 }
+
+/* necessary for the agenda in order to use dayClick event */
+#calendar {
+  overflow-x: auto;
+}
