--- a/app/views/pages/_agenda.html.erb
+++ b/app/views/pages/_agenda.html.erb
@@ -1,7 +1,47 @@
 <%= render "pages/buttons/backward", text: "Détails", url: "details" %>
 
 <div class="content">
-  AGENDA
+  <div id="calendar"></div>
+
+  <div id="reservation">
+
+    <div id="errors"></div>
+
+    <%= form_for Reservation.new, remote: true do |f| %>
+
+      <%= f.label :date %>
+      <%= f.date_field :date %>
+
+      <%= f.label :description %>
+      <%= f.text_area :description %>
+
+      <%= f.label :firstname %>
+      <%= f.text_field :firstname %>
+
+      <%= f.label :lastname %>
+      <%= f.text_field :lastname %>
+
+      <%= f.label :email %>
+      <%= f.text_field :email %>
+
+      <%= f.label :phone %>
+      <%= f.text_field :phone %>
+
+      <%= f.label :address %>
+      <%= f.text_field :address %>
+
+      <%= f.label :zip %>
+      <%= f.number_field :zip %>
+
+      <%= f.label :city %>
+      <%= f.text_field :city %>
+
+      <%= f.submit %>
+
+    <% end %>
+
+  </div>
+
 </div>
 
 <%= render "pages/buttons/forward", text: "Contact", url: "contact" %>
