add page class to wrap

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -20,7 +20,7 @@
 
 </section>
 
-<section id="page">
+<section id="page" class="<%= current_page %>">
   <div class="wrap previous"></div>
   <div class="wrap current"><%= render_page %></div>
   <div class="wrap next"></div>
