--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -2,9 +2,9 @@
 
   <%= image_tag "home/logo.png" %>
 
-  <div class="reserve">
+  <div>
     <svg width="100%" height="100%" shape-rendering="geometricPrecision">
-      <text shape-rendering="geometricPrecision" fill="transparent" font-size="50" font-weight="600" y="50%" x="50%" text-anchor="middle" stroke-width="3" stroke="white">Réserver</text>
+      <text class="reserve" shape-rendering="geometricPrecision" fill="transparent" font-size="50" font-weight="600" y="60%" x="50%" text-anchor="middle" stroke-width="3" stroke="white">Réserver</text>
     </svg>
   </div>
 
