--- a/app/views/pages/_details.html.erb
+++ b/app/views/pages/_details.html.erb
@@ -1,6 +1,24 @@
 <%= render "pages/buttons/backward", text: "Visiter", url: "visit" %>
 
 <div class="content">
+  <h1>Détail</h1>
+  <table>
+    <tr>
+      <td>surface</td><td>80m2</td>
+    </tr>
+    <tr>
+      <td>parking</td><td>10 places</td>
+    </tr>
+    <tr>
+      <td>accès</td><td>escalier</td>
+    </tr>
+    <tr>
+      <td>n pièces</td><td>5</td>
+    </tr>
+    <tr>
+      <td>bar</td><td>Lave-vaisselle, tireuse, services, ...</td>
+    </tr>
+  </table>
   <p>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc sagittis dolor ut nunc accumsan, vitae feugiat tortor pellentesque. Fusce ac sem vitae nunc rhoncus tincidunt. In arcu sapien, semper vel est vel, tincidunt eleifend tellus. Quisque quis massa id enim consectetur semper a vel tortor. Fusce dignissim pretium ligula in porta. Phasellus a lacus fermentum, cursus neque vel, venenatis tortor. Quisque eleifend, lacus at hendrerit semper, enim mauris blandit mauris, a fringilla enim orci consequat sem. Nam maximus tellus augue, a molestie eros rutrum eu. Nunc euismod velit nec ultrices fringilla. Proin ac mi rhoncus, sollicitudin massa id, pulvinar quam. Nam varius id lacus ac tincidunt. Proin nec nunc elit.
     Nulla vestibulum lorem velit, sed efficitur turpis tempor sed. Mauris tempus sapien volutpat dui maximus, a dictum augue euismod. Pellentesque accumsan pellentesque enim porttitor mattis. Duis facilisis purus ut velit blandit, ut aliquam magna pellentesque. Ut porta et odio et rhoncus. Sed cursus, odio eu fringilla rutrum, velit urna dapibus velit, eget vulputate velit nisi non nibh. Integer at nibh commodo, cursus ligula in, porta mi.
