--- a/app/views/pages/_agenda.html.erb
+++ b/app/views/pages/_agenda.html.erb
@@ -1,6 +1,7 @@
 <%= render "pages/buttons/backward", text: "Détails", url: "details" %>
 
 <div class="content">
+  <h1>Agenda</h1>
   <div id="calendar"></div>
 
   <div id="reservation">
