--- a/app/views/pages/_contact.html.erb
+++ b/app/views/pages/_contact.html.erb
@@ -1,5 +1,6 @@
 <%= render "pages/buttons/backward", text: "Agenda", url: "agenda" %>
 
 <div class="content">
+  <h1>Contact</h1>
   CONTACT
 </div>
