--- a/app/views/pages/_details.html.erb
+++ b/app/views/pages/_details.html.erb
@@ -2,6 +2,7 @@
 
 <div class="content">
   <h1>Détail</h1>
+  <h2>Caractéristiques</h2>
   <table>
     <tr>
       <td>surface</td><td>80m2</td>
@@ -19,11 +20,19 @@
       <td>bar</td><td>Lave-vaisselle, tireuse, services, ...</td>
     </tr>
   </table>
-  <p>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc sagittis dolor ut nunc accumsan, vitae feugiat tortor pellentesque. Fusce ac sem vitae nunc rhoncus tincidunt. In arcu sapien, semper vel est vel, tincidunt eleifend tellus. Quisque quis massa id enim consectetur semper a vel tortor. Fusce dignissim pretium ligula in porta. Phasellus a lacus fermentum, cursus neque vel, venenatis tortor. Quisque eleifend, lacus at hendrerit semper, enim mauris blandit mauris, a fringilla enim orci consequat sem. Nam maximus tellus augue, a molestie eros rutrum eu. Nunc euismod velit nec ultrices fringilla. Proin ac mi rhoncus, sollicitudin massa id, pulvinar quam. Nam varius id lacus ac tincidunt. Proin nec nunc elit.
-    Nulla vestibulum lorem velit, sed efficitur turpis tempor sed. Mauris tempus sapien volutpat dui maximus, a dictum augue euismod. Pellentesque accumsan pellentesque enim porttitor mattis. Duis facilisis purus ut velit blandit, ut aliquam magna pellentesque. Ut porta et odio et rhoncus. Sed cursus, odio eu fringilla rutrum, velit urna dapibus velit, eget vulputate velit nisi non nibh. Integer at nibh commodo, cursus ligula in, porta mi.
-    Sed iaculis efficitur euismod. Donec at semper mi. Etiam ac turpis ac dui feugiat eleifend in condimentum sapien. Proin ac facilisis ipsum, vel congue mi. Pellentesque finibus pellentesque libero nec venenatis. Sed maximus molestie ex, at finibus tortor sollicitudin sed. Aenean fringilla velit vel orci tristique tincidunt. Pellentesque dapibus, leo in porta eleifend, sapien turpis fringilla turpis, in mattis nulla diam at odio. Proin pretium justo vitae nisi facilisis, eget mollis ante tincidunt. Nulla eget justo elit. Pellentesque tortor sem, aliquet eget sollicitudin at, cursus ac turpis. Proin porta suscipit leo vel interdum. Aliquam pretium commodo turpis id vulputate. Praesent a ligula egestas, ornare dolor et, pulvinar risus. Quisque consequat augue sit amet ex tristique iaculis. Cras vulputate, nisi vel semper interdum, ex lorem posuere eros, vitae tempus mi eros nec metus.
+  <h2>Documents</h2>
+  <p>Contrat de location:<br>
+    <%= link_to "#" do %>
+      <%= image_tag image_url("details/file.svg"), class: "doc" %>
+    <% end %>
   </p>
+  <p>Fiche de réservation:<br>
+    <%= link_to "#" do %>
+      <%= image_tag image_url("details/file.svg"), class: "doc" %>
+    <% end %>
+  </p>
+  <h2>Accès</h2>
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2738.3840719716477!2d7.100035412513048!3d46.65867788826081!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x478e63dcbcb98707%3A0x2481337d9cca5fa1!2sRoute+du+Vanel+80%2C+1647+Corbi%C3%A8res!5e0!3m2!1sen!2sch!4v1477608124063" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 </div>
 
 <%= render "pages/buttons/forward", text: "Agenda", url: "agenda" %>
