--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -21,7 +21,7 @@
 </section>
 
 <section id="page" class="<%= current_page %>">
-  <div class="wrap previous"></div>
-  <div class="wrap current"><%= render_page %></div>
-  <div class="wrap next"></div>
+  <div class="slide previous"></div>
+  <div class="slide current"><%= render_page %></div>
+  <div class="slide next"></div>
 </section>
