--- a/app/views/pages/_contact.html.erb
+++ b/app/views/pages/_contact.html.erb
@@ -1,6 +1,8 @@
-<%= render "pages/buttons/backward", text: "Agenda", url: "agenda" %>
+<div class="wrap contact">
+  <%= render "pages/buttons/backward", text: "Agenda", url: "agenda" %>
 
-<div class="content">
-  <h1>Contact</h1>
-  CONTACT
+  <div class="content">
+    <h1>Contact</h1>
+    CONTACT
+  </div>
 </div>
