--- a/app/views/pages/new.js.erb
+++ b/app/views/pages/new.js.erb
@@ -1,3 +1,3 @@
-$("#container section#page .wrap.current").html('<%= j render "pages/#{params[:page]}" %>');
+$("#container section#page .slide.current").html('<%= j render "pages/#{params[:page]}" %>');
 
 document.dispatchEvent(pageLoad);
