--- a/app/assets/stylesheets/layout/home.scss
+++ b/app/assets/stylesheets/layout/home.scss
@@ -23,9 +23,9 @@
   header {
     position: absolute;
     bottom: 0;
-    background-color: rgba(255, 255, 255, .9);
+    // background-color: rgba(255, 255, 255, .9);
     width: 100%;
-    height: 10%;
+    height: 70px;
 
     nav {
       font-size: 1.5em;
@@ -33,9 +33,11 @@
       display: flex;
       justify-content: space-around;
       align-items: center;
+      padding: 20px 0;
 
       a {
-        color: black;
+        color: #fff;
+        padding: 6px 17px;
       }
     }
   }
