--- a/app/assets/stylesheets/layout/home.scss
+++ b/app/assets/stylesheets/layout/home.scss
@@ -12,6 +12,7 @@
   align-items: center;
 
   .reserve {
+    cursor: pointer;
     font-family: sans-serif;
     &:hover {
       -webkit-animation: neon2 1.5s ease-in-out infinite alternate;
