--- a/app/assets/stylesheets/pages/details.scss
+++ b/app/assets/stylesheets/pages/details.scss
@@ -9,6 +9,7 @@ section#page .details {
         }
       }
     }
+
     td {
       padding: 15px 10px;
       border: 2px solid #fff;
@@ -17,7 +18,12 @@ section#page .details {
       }
     }
   }
+
   img.doc {
     width: 80px;
+  }
+
+  #map {
+    height: 400px;
   }
 }
