--- a/app/views/pages/_details.html.erb
+++ b/app/views/pages/_details.html.erb
@@ -33,7 +33,9 @@
       <% end %>
     </p>
     <h2>Accès</h2>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2738.3840719716477!2d7.100035412513048!3d46.65867788826081!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x478e63dcbcb98707%3A0x2481337d9cca5fa1!2sRoute+du+Vanel+80%2C+1647+Corbi%C3%A8res!5e0!3m2!1sen!2sch!4v1477608124063" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+
+    <div id="map"></div>
+
   </div>
 
   <%= render "pages/buttons/forward", text: "Agenda", url: "agenda" %>
