--- a/app/views/pages/buttons/_new.html.erb
+++ b/app/views/pages/buttons/_new.html.erb
@@ -1,1 +1,1 @@
-<%= link_to text, "load/new/#{url}", method: :put, remote: true, data: { url: url }, class: "new" %>
+<%= link_to text, "load/new/#{url}", method: :put, remote: true, data: { url: url }, class: nav_class(url) %>
