--- a/app/views/pages/_agenda.html.erb
+++ b/app/views/pages/_agenda.html.erb
@@ -3,7 +3,13 @@
 
   <div class="content">
     <h1>Agenda</h1>
+
+    <p>L'agenda ci-dessous indique les disponibilités de locations. Il est possible de pré-réserver directement
+      à l'aide du formulaire présent en bas de page. La pré-réservation est confirmée après paiement.</p>
+
     <div id="calendar"></div>
+
+    <h2>Formulaire de pré-réservation</h2>
 
     <div id="reservation">
 
