--- a/app/assets/stylesheets/components/map.scss
+++ b/app/assets/stylesheets/components/map.scss
@@ -1,17 +1,21 @@
 svg.map {
-    rect {
-      fill: #f76868;
+  max-width: 600px;
+  margin: 50px auto;
+  display: block;
+  border: 4px solid #d7e3f2;
+  rect {
+    fill: #d7e3f2;
+  }
+  .room {
+    cursor: pointer;
+    &:hover text {
+      opacity: 1 !important;
     }
-    .room {
-      cursor: pointer;
-      &:hover text {
-        opacity: 1 !important;
-      }
-    }
-    text {
-      opacity: 0.5 !important;
-    }
+  }
+  text {
+    opacity: 0.5 !important;
+  }
 }
 html.fancybox-lock {
-    overflow: visible !important;
+  overflow: visible !important;
 }
