--- a/app/assets/stylesheets/pages/agenda.scss
+++ b/app/assets/stylesheets/pages/agenda.scss
@@ -1,9 +1,15 @@
 section#page .agenda {
 
+  #calendar {
+    padding: 40px 0;
+  }
+
   #new_reservation {
     display: flex;
     flex-direction: column;
     align-items: center;
+    background: #cbddeb;
+    padding: 0 0 20px 0;
 
     .row {
       display: flex;
