--- a/app/views/pages/_contact.html.erb
+++ b/app/views/pages/_contact.html.erb
@@ -3,6 +3,13 @@
 
   <div class="content">
     <h1>Contact</h1>
-    CONTACT
+    <p><center>
+      Vanel's Club<br>
+      Route du Vanel 80<br>
+      1674 Corbières
+    </center></p>
+    <p><center>contact [at] vanels.ch</center></p>
+
+    <div id="map"></div>
   </div>
 </div>
