--- a/app/views/pages/_map.html.erb
+++ b/app/views/pages/_map.html.erb
@@ -1,14 +1,18 @@
 <svg class="map" width="100%" height="100%" viewBox="0 0 600 400" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:1.41421;">
+
   <%= link_to image_url("gallery/main-hall.jpg"), data: {"lightbox": "gal1"} do %>
-    <g class="room">
-      <rect x="77.018" y="130.286" width="114.923" height="232.94" />
-      <g transform="matrix(1,0,0,1,-9.54326,7.49358)">
-        <text x="97.573px" y="231.514px">Grande</text>
-        <text x="117.139px" y="262.959px">salle</text>
-      </g>
+  <g class="room">
+    <rect x="77.018" y="130.286" width="114.923" height="232.94" />
+    <g transform="matrix(1,0,0,1,-9.54326,7.49358)">
+      <text x="97.573px" y="231.514px">Grande</text>
+      <text x="117.139px" y="262.959px">salle</text>
     </g>
+  </g>
   <% end %>
-  <%= link_to "", image_url("gallery/main-hall.jpg"), data: {"lightbox": "gal1"} %>
+  <%= link_to "", image_url("gallery/main-hall2.jpg"), data: {"lightbox": "gal1"} %>
+  <%= link_to "", image_url("gallery/main-hall3.jpg"), data: {"lightbox": "gal1"} %>
+
+  <%= link_to image_url("gallery/small-room.jpg"), data: {"lightbox": "gal2"} do %>
   <g class="room">
     <rect x="203.2" y="206.53" width="114.923" height="156.696" />
     <g transform="matrix(1,0,0,1,120.953,51.237)">
@@ -16,6 +20,9 @@
       <text x="117.139px" y="262.959px">salle</text>
     </g>
   </g>
+  <% end %>
+  <%= link_to "", image_url("gallery/small-room2.jpg"), data: {"lightbox": "gal2"} %>
+
   <g class="room">
     <rect x="335.603" y="246.756" width="114.923" height="116.47" />
     <g transform="matrix(1,0,0,1,265,68.2709)">
@@ -30,6 +37,7 @@
       <text x="95.945px" y="262.959px">homme</text>
     </g>
   </g>
+
   <g class="room">
     <rect x="354.386" y="73.995" width="81.9" height="76.824" />
     <g transform="matrix(1,0,0,1,265,-126.91)">
@@ -37,10 +45,15 @@
       <text x="104.892px" y="262.959px">au bol</text>
     </g>
   </g>
+
+  <%= link_to image_url("gallery/welcome.jpg"), data: {"lightbox": "gal3"} do %>
   <g class="room">
     <rect x="77.018" y="36.774" width="114.923" height="86.996" />
     <text x="89.673px" y="87.669px">Accueil</text>
   </g>
+  <% end %>
+  <%= link_to "", image_url("gallery/welcome2.jpg"), data: {"lightbox": "gal3"} %>
+
 </svg>
 
 <%= javascript_include_tag 'lightbox', 'data-turbolinks-track': 'reload' %>
